--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
+    "interpolate-html-plugin": "^3.0.0",
     "material-ui": "^0.20.2",
     "react": "^16.13.1",
     "react-chartjs": "^1.2.0",
